--- a/build.gradle
+++ b/build.gradle
@@ -15,17 +15,26 @@ repositories {
     maven { url = "https://maven.terraformersmc.com/" }
     // for config
     maven { url = "https://cursemaven.com" }
+    maven { url = "https://maven.devos.community/snapshots/" }
+    maven { url = "https://maven.devos.community/releases/" }
+    maven { url = "https://maven.jamieswhiteshirt.com/libs-release" }
+    maven { url = "https://maven.terraformersmc.com/releases/" }
+    maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url = "https://api.modrinth.com/maven" }
+    maven { url = "https://jitpack.io" }
 }
 
 dependencies {
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    mappings loom.officialMojangMappings()
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "mcjty.theoneprobe:theoneprobe-fabric:${project.top_version}"
 
-   modCompileOnly "curse.maven:modern-industrialization-405388:3646911"
+    modCompileOnly "slimeknights.tconstruct:TConstruct:1.18.1-3.4.1.DEV.a4b9907"
+
+    modCompileOnly "curse.maven:modern-industrialization-405388:3646911"
 }
 
 processResources {
