--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.18.2
+minecraft_version=1.18.1
+yarn_mappings=1.18.1+build.22
 loader_version=0.13.3
 # Mod Properties
 version=1.0.0
