--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,20 @@ repositories {
     maven { url = "https://ladysnake.jfrog.io/artifactory/mods" }
     maven { url = "https://api.modrinth.com/maven" }
     maven { url = "https://jitpack.io" }
+    maven { // AE 2 maven
+        name "Modmaven"
+        url "https://modmaven.dev/"
+        // For Gradle 5.1 and above, limit it to just AE2
+        content {
+            includeGroup 'appeng'
+        }
+    }
+    maven {
+        url "https://maven.bai.lol"
+        content {
+            includeGroup "mcp.mobius.waila"
+        }
+    }
 }
 
 dependencies {
@@ -33,11 +47,15 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "mcjty.theoneprobe:theoneprobe-fabric:${project.top_version}"
 
-    modCompileOnly "slimeknights.tconstruct:TConstruct:1.18.1-3.4.1.DEV.a4b9907"
+//    modCompileOnly "slimeknights.tconstruct:TConstruct:1.18.1-3.4.1.DEV.a4b9907"
 
     modCompileOnly "curse.maven:modern-industrialization-405388:3646911"
-    modApi "me.shedaniel.cloth.api:cloth-api:3.1.61"
+    modImplementation "me.shedaniel.cloth.api:cloth-api:3.1.61"
     modImplementation("net.devtech:arrp:0.5.7")
+
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:4.1.3"
+
+    modImplementation "appeng:appliedenergistics2-fabric:10.0.0"
 }
 
 processResources {
